@@ -26,7 +26,7 @@ root = skel
 
 [ReadmeAnyFromPod]
 type = markdown
-filename = README.md
+filename = README.pod
 location = build
 
 [License]
