@@ -8,6 +8,8 @@ Revision history for {{$dist->name}}
             prereq declaration, for valid metadata production
           - airplane mode can now also be enabled via the DZIL_AIRPLANE
             environment variable
+          - now converting the main module to README.pod (pod instead of
+            markdown) for committing to the repository
 
 0.065     2014-06-09 20:36:31Z
           - fix dist.ini in minted dzil plugin dist (v0.064)
